--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -30,4 +31,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.myStyle.myStyle {
+  margin-top: 100px;
+  margin-left: 50px;
+  color: black;
+  background-color: lightgrey;
+  padding: 10px;
+  border: 1px black dashed;
+  width: 250px;
 }
