--- a/src/userConflicts.css
+++ b/src/userConflicts.css
@@ -4,11 +4,11 @@
   padding: 20px;
   border: 5px rgba(0, 53, 89, 1) solid;
   border-radius: 5px;
-  width: 100%;
+  width: 400px;
   height: 100%;
   display: flex;
-  flex-direction: row;
-  margin: auto;
+  flex-direction: column;
+  margin: 40px auto;
 }
 
 .block {
