--- a/src/userConflicts.css
+++ b/src/userConflicts.css
@@ -20,7 +20,7 @@
 }
 
 .teamBlock {
-  height: 100px;
+  height: 80px;
   width: 160px;
   border-radius: 5px;
   text-align: center;
@@ -33,7 +33,7 @@
   border-left: 5px solid rgb(194, 238, 113);
   border-bottom: 5px solid rgb(74, 112, 4);
   border-right: 5px solid rgb(99, 150, 5);
-  font-size: 16px;
+  font-size: 14px;
   user-select: none;
 }
 
@@ -43,7 +43,7 @@
   border-left: 5px solid rgb(189, 124, 3);
   border-bottom: 5px solid rgb(248, 201, 114);
   border-right: 5px solid rgb(247, 187, 75);
-  font-size: 16px;
+  font-size: 14px;
   user-select: none;
 }
 
@@ -51,7 +51,7 @@
   background: rgba(0, 53, 89, 1);
   border: 5px solid rgba(0, 53, 89, 1);
   color: rgb(161, 233, 29);
-  font-size: 16px;
+  font-size: 14px;
   user-select: none;
 }
 
@@ -82,8 +82,8 @@
 
 .teamTimeBlockDiv {
   background: rgb(74, 162, 197);
-  height: 590px;
-  width: 900px;
+
+  width: 990px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -108,8 +108,8 @@
 }
 
 .teamDate {
-  height: 100px;
-  width: 160px;
+  height: 50px;
+  width: 150px;
   border-radius: 5px;
   text-align: center;
   margin: 3px;
@@ -131,4 +131,10 @@
   border-radius: 25px;
   font-size: large;
   min-width: 120px;
+}
+
+.cell {
+  height: 50px;
+  width: 110px;
+  margin: 3px;
 }
