--- a/src/userConflicts.css
+++ b/src/userConflicts.css
@@ -204,3 +204,39 @@ hr {
   width: 910px;
   padding: 0px;
 }
+
+.userConflictsContainerDiv {
+  color: rgba(0, 53, 89, 1);
+  background-color: rgb(74, 162, 197);
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  width: 670px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 40px auto;
+}
+
+.userConflictsContainerDiv2 {
+  display: flex;
+  flex-direction: row;
+  width: 650px;
+}
+
+.userConflictsContainerDiv3 {
+  margin: 5px;
+}
+
+.userConflictCalendarDiv {
+  color: rgba(0, 53, 89, 1);
+  background-color: rgb(235, 236, 238);
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  max-width: 410px;
+  max-height: 360px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
