--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,18 @@
   border: 1px black dashed;
   width: 250px;
 }
+
+.welcomeBox {
+  color: rgb(176, 192, 203);
+  background: rgba(0, 53, 89, 1);
+  background-size: cover;
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  width: 60%;
+  height: 100ev;
+  display: flex;
+  flex-direction: column;
+  margin: 2ev;
+  min-width: 40%;
+}
