--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body {
   border: 5px rgba(0, 53, 89, 1) solid;
   border-radius: 5px;
   width: 60%;
-  height: 100ev;
+  height: 100;
   display: flex;
   flex-direction: column;
   margin: 2ev;
