--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   display: flex;
+  flex-direction: column;
   background-size: 100%;
 }
+
 .App {
   text-align: center;
 }
@@ -52,9 +54,8 @@ body {
   background-size: cover;
   padding: 20px;
   border: 5px rgba(0, 53, 89, 1) solid;
-  border-radius: 5px;
   width: 60%;
-  height: 100ev;
+  height: 900px;
   display: flex;
   flex-direction: column;
   margin: 2ev;
@@ -64,7 +65,7 @@ body {
 .welcomeText {
   color: rgb(161, 233, 29);
   text-align: center;
-  font-size: 32px;
+  font-size: 80px;
 }
 
 .welcomeExplain {
