--- a/src/userConflicts.css
+++ b/src/userConflicts.css
@@ -21,7 +21,7 @@
 
 .teamBlock {
   height: 80px;
-  width: 160px;
+  width: 100%;
   border-radius: 5px;
   text-align: center;
   margin: 3px;
@@ -138,7 +138,7 @@
 
 .cell {
   height: 50px;
-  width: 110px;
+  width: 100%;
   margin: 3px;
 }
 .teamCalendarDivContainer {
@@ -157,7 +157,7 @@
 .teamTimeBlockDiv2 {
   display: flex;
   justify-content: center;
-  width: 75%;
+  width: 100%;
   flex-direction: row;
   padding: 5px;
   padding-top: 10px;
@@ -179,7 +179,7 @@ hr {
 .coachTimeBlockDiv {
   display: flex;
   flex-direction: row;
-  width: 910px;
+  width: 100%;
   padding: 0px;
   padding-top: 10px;
   padding-bottom: 0px;
@@ -187,7 +187,7 @@ hr {
 
 .myConflictsDiv {
   height: 50px;
-  width: 160px;
+  width: 150px;
   border-radius: 5px;
   text-align: center;
   margin: 3px;
@@ -195,6 +195,7 @@ hr {
   border: 5px rgba(0, 53, 89, 1) solid;
   background-color: rgb(235, 236, 238);
   font-size: 16px;
+  margin-left: 5px;
 
   display: flex;
   flex-direction: column;
@@ -206,8 +207,9 @@ hr {
 .parentTimeBlockDiv {
   display: flex;
   flex-direction: column;
-  width: 910px;
+  width: 100%;
   padding: 0px;
+  padding-left: 2px;
   user-select: none;
 }
 
