--- a/src/userConflicts.css
+++ b/src/userConflicts.css
@@ -183,6 +183,8 @@ hr {
   padding: 0px;
   padding-top: 10px;
   padding-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .myConflictsDiv {
@@ -196,12 +198,12 @@ hr {
   background-color: rgb(235, 236, 238);
   font-size: 16px;
   margin-left: 5px;
-
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   user-select: none;
+  min-width: 150px;
 }
 
 .parentTimeBlockDiv {
@@ -211,6 +213,8 @@ hr {
   padding: 0px;
   padding-left: 2px;
   user-select: none;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .userConflictsContainerDiv {
@@ -274,4 +278,126 @@ hr {
 
 h1 {
   user-select: none;
+}
+
+.teamConflictsContainerDiv {
+  color: rgba(0, 53, 89, 1);
+  background-color: rgb(74, 162, 197);
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  width: 400px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 40px auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.flexRow100 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.flexRow85 {
+  display: flex;
+  flex-direction: row;
+  width: 85%;
+}
+
+.matchConflictsContainerDiv {
+  color: rgba(0, 53, 89, 1);
+  background-color: rgb(74, 162, 197);
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  width: 400px;
+  height: 100%;
+  margin: 40px auto;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 1050px;
+}
+
+.flexColumnCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.selectTeamContainerDiv {
+  color: rgba(0, 53, 89, 1);
+  background-color: rgb(235, 236, 238);
+  padding: 20px;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  background: rgb(235, 236, 238);
+  margin: 5px;
+  margin-left: 10px;
+}
+
+.matchTimeBlockDiv {
+  background: rgb(74, 162, 197);
+  height: 540px;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 5px rgba(0, 53, 89, 1) solid;
+  border-radius: 5px;
+  margin: 5px;
+  margin-left: 15px;
+}
+
+.rowContainerDiv {
+  display: flex;
+  flex-direction: row;
+  padding-top: 0px;
+  padding: 0px;
+  margin-left: 3px;
+  margin-right: 6px;
+  width: 100%;
+}
+
+.parentNameDiv {
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  text-align: center;
+  margin: 3px;
+  color: rgba(0, 53, 89, 1);
+  border: 5px rgba(0, 53, 89, 1) solid;
+  background-color: rgb(235, 236, 238);
+  font-size: 16px;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  user-select: none;
+  min-width: 150px;
+  height: 50px;
+  padding: 0px;
+}
+
+.cellContainerDiv {
+  display: flex;
+  flex-direction: row;
+  width: 85%;
+  margin-right: 6px;
+  margin-left: 2px;
 }
