--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,13 @@ body {
   height: 100%;
   width: 100%;
 }
+
+.header.header{
+  background: rgba(0, 53, 89, 1);
+  color: rgb(161, 233, 29);
+  border: 3px rgb(130, 184, 31) solid;
+  border-Radius: 25px;
+  text-Align: center;
+  width: 100%;
+  font-Size: 25px;
+}
